--- a/flask-app-example-chart/values.yaml
+++ b/flask-app-example-chart/values.yaml
@@ -10,7 +10,8 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: latest
 
-imagePullSecrets: ghcr-secret
+# imagePullSecrets: ghcr-secret
+imagePullSecretName: ghcr-secret
 nameOverride: ""
 fullnameOverride: ""
 
